--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,11 @@
 }
 #home,
 #whyBook {
-  background-color: white;
+  background: url('/img/inyourgrasp.png');
+  color: white;
+  background-position: 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 #aboutBook,
 #aboutAuthor {
