--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 #home,
 #whyBook {
-  background: url('/img/inyourgrasp.png');
+  background: url('img/inyourgrasp.png');
   background-position: 0;
   background-size: cover;
   background-attachment: fixed;
