--- a/css/style.css
+++ b/css/style.css
@@ -3,26 +3,31 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :root {
   --main-blue-color: rgb(29, 154, 248);
   --secondary-blue-color: rgb(11, 107, 235);
   --icon-white-color: rgb(238, 236, 236);
   --icon-hover-color: rgb(255, 174, 0);
 }
+
 .navbar {
   box-shadow: 2px 2px 2px #3f3e3e;
   border-radius: 3px;
-  opacity: 0.98;
 }
+
 .navbar-light .navbar-brand,
 .nav-link {
   color: snow !important;
+  transition: 0.2s ease-out;
 }
+
 .bg-dark,
 .bg-primary {
   background-color: var(--main-blue-color) !important;
 }
-#home,
+
+#splash,
 #whyBook {
   background: url('../img/inyourgrasp.png');
   background-position: 0;
@@ -33,33 +38,43 @@
   /* text shadow for visibility over picture */
   text-shadow: 1px 1px 2px black;
 }
+
 #aboutBook,
 #aboutAuthor {
   background-color: rgba(182, 180, 180, 0.79);
 }
+
 #authorPic {
   border-radius: 50%;
 }
+
 #buyBook {
   background-color: #fff;
 }
+
 /* icons */
 .fab {
   color: var(--icon-white-color);
+  transition: 0.2s ease-out;
 }
+
+.nav-link:hover,
 .fab:hover {
-  color: var(--icon-hover-color);
+  color: var(--icon-hover-color) !important;
 }
+
 /* buttons */
 .btn-outline-primary {
   background-color: #fff;
   color: var(--main-blue-color);
   border-color: var(--main-blue-color);
 }
+
 .btn-outline-primary:hover {
   background-color: var(--main-blue-color);
   border-color: var(--main-blue-color);
 }
+
 .btn-outline-primary:active {
   background-color: var(--secondary-blue-color) !important;
   border-color: var(--secondary-blue-color) !important;
