--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@
   text-shadow: 1px 1px 2px black;
 }
 
-#aboutBook,
+#aboutBook {
+  background-color: #fff;
+}
 #aboutAuthor {
   background-color: rgba(182, 180, 180, 0.79);
 }
